--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.1.1) unstable; urgency=medium
+
+  * periodic release
+
+ -- Ivan Gagis <igagis@gmail.com>  Wed, 03 Aug 2016 00:19:00 +0300
+
 libmordavokne (0.1.0) unstable; urgency=low
 
   * Initial release
