--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.1.3) unstable; urgency=medium
+
+  * add deployment token to travis
+
+ -- Ivan Gagis <igagis@gmail.com>  Wed, 03 Aug 2016 16:30:34 +0300
+
 libmordavokne (0.1.2) unstable; urgency=medium
 
   * travis corrected
