--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.1.4) unstable; urgency=medium
+
+  * bintray secure key fixed
+
+ -- Ivan Gagis <igagis@gmail.com>  Wed, 03 Aug 2016 17:35:43 +0300
+
 libmordavokne (0.1.3) unstable; urgency=medium
 
   * add deployment token to travis
