--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.1.5) unstable; urgency=medium
+
+  * test release
+
+ -- Ivan Gagis <igagis@gmail.com>  Wed, 03 Aug 2016 20:25:34 +0300
+
 libmordavokne (0.1.4) unstable; urgency=medium
 
   * bintray secure key fixed
