--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.1.6) unstable; urgency=medium
+
+  * test release
+
+ -- Ivan Gagis <igagis@gmail.com>  Wed, 03 Aug 2016 23:57:33 +0300
+
 libmordavokne (0.1.5) unstable; urgency=medium
 
   * test release
