--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.1.7) unstable; urgency=medium
+
+  * cocoapods workaround
+
+ -- Ivan Gagis <igagis@gmail.com>  Thu, 04 Aug 2016 22:33:12 +0300
+
 libmordavokne (0.1.6) unstable; urgency=medium
 
   * test release
