--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.1.8) unstable; urgency=medium
+
+  * cocoapods build
+
+ -- Ivan Gagis <igagis@gmail.com>  Fri, 05 Aug 2016 00:48:39 +0300
+
 libmordavokne (0.1.7) unstable; urgency=medium
 
   * cocoapods workaround
