--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.2.0) unstable; urgency=medium
+
+  * initial release
+
+ -- Ivan Gagis <igagis@gmail.com>  Thu, 11 Aug 2016 11:55:29 +0300
+
 libmordavokne (0.1.9) unstable; urgency=medium
 
   * rdynamic flag added to pkg-config
