--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.2.1) unstable; urgency=medium
+
+  * msvs debug symbols
+
+ -- Ivan Gagis <igagis@gmail.com>  Fri, 12 Aug 2016 16:26:50 +0300
+
 libmordavokne (0.2.0) unstable; urgency=medium
 
   * initial release
