--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.2.2) unstable; urgency=medium
+
+  * nuget update
+
+ -- Ivan Gagis <igagis@gmail.com>  Sat, 13 Aug 2016 03:22:31 +0300
+
 libmordavokne (0.2.1) unstable; urgency=medium
 
   * msvs debug symbols
