--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.2.3) unstable; urgency=medium
+
+  * cocoapods release
+
+ -- Ivan Gagis <igagis@gmail.com>  Sun, 14 Aug 2016 22:47:43 +0300
+
 libmordavokne (0.2.2) unstable; urgency=medium
 
   * nuget update
