--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.2.4) unstable; urgency=medium
+
+  * nuget: fixed library files pickup
+
+ -- Ivan Gagis <igagis@gmail.com>  Mon, 15 Aug 2016 20:14:45 +0300
+
 libmordavokne (0.2.3) unstable; urgency=medium
 
   * cocoapods release
