--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libmordavokne (0.2.5) unstable; urgency=medium
+
+  * windows: filter out backspace, escape and carriage return from
+    character input
+
+ -- Ivan Gagis <igagis@gmail.com>  Tue, 16 Aug 2016 20:49:31 +0300
+
 libmordavokne (0.2.4) unstable; urgency=medium
 
   * nuget: fixed library files pickup
