--- a/wiki/installation/Linux.adoc
+++ b/wiki/installation/Linux.adoc
@@ -12,7 +12,7 @@ Update apt packages:
 sudo apt-get update
 ....
 
-Install libmordavokne-dev package:
+Install **libmordavokne-dev** package:
 ....
 sudo apt-get install libmordavokne-dev
 ....
