--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.2.8) unstable; urgency=medium
+
+  * deploy to debian,ubuntu,raspberry
+
+ -- Ivan Gagis <igagis@gmail.com>  Sat, 17 Sep 2016 01:13:28 +0300
+
 libmordavokne (0.2.7) unstable; urgency=medium
 
   * cocoapods dependency fix
