--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.2.9) unstable; urgency=medium
+
+  * rasp release
+
+ -- Ivan Gagis <igagis@gmail.com>  Sun, 18 Sep 2016 14:57:07 +0300
+
 libmordavokne (0.2.8) unstable; urgency=medium
 
   * deploy to debian,ubuntu,raspberry
