--- a/wiki/installation/Linux.adoc
+++ b/wiki/installation/Linux.adoc
@@ -2,17 +2,21 @@
 
 ## Debian/Ubuntu
 
-Add the repo to your sources (needs to be done once):
-....
- echo $'deb https://dl.bintray.com/igagis/deb /' | sudo tee /etc/apt/sources.list.d/igagis.list > /dev/null
-....
+- Add the repo to your sources (needs to be done once):
 
-Update apt packages:
+**Debian**
+....
+ echo $'deb https://dl.bintray.com/igagis/deb unstable main' | sudo tee /etc/apt/sources.list.d/igagis.list > /dev/null
+....
+**Ubuntu**
+....
+ echo $'deb https://dl.bintray.com/igagis/ubu unstable main' | sudo tee /etc/apt/sources.list.d/igagis.list > /dev/null
+....
+- Update apt packages:
 ....
 sudo apt-get update
 ....
-
-Install **libmordavokne-dev** package:
+- Install **libmordavokne-dev** package:
 ....
 sudo apt-get install libmordavokne-dev
 ....
