--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.2.12) unstable; urgency=medium
+
+  * test release
+
+ -- Ivan Gagis <igagis@gmail.com>  Sun, 19 Feb 2017 18:39:00 +0200
+
 libmordavokne (0.2.11) unstable; urgency=medium
 
   * test release
