--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.2.15) unstable; urgency=medium
+
+  * test release
+
+ -- Ivan Gagis <igagis@gmail.com>  Thu, 23 Feb 2017 22:50:42 +0200
+
 libmordavokne (0.2.14) unstable; urgency=medium
 
   * test release
