--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.2.16) unstable; urgency=medium
+
+  * test release
+
+ -- Ivan Gagis <igagis@gmail.com>  Sat, 04 Mar 2017 19:29:50 +0200
+
 libmordavokne (0.2.15) unstable; urgency=medium
 
   * test release
