--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.2.17) unstable; urgency=medium
+
+  * test release
+
+ -- Ivan Gagis <igagis@gmail.com>  Thu, 09 Mar 2017 21:05:19 +0200
+
 libmordavokne (0.2.16) unstable; urgency=medium
 
   * test release
