--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.2.19) unstable; urgency=medium
+
+  * test release
+
+ -- Ivan Gagis <igagis@gmail.com>  Tue, 14 Mar 2017 22:21:02 +0200
+
 libmordavokne (0.2.18) unstable; urgency=medium
 
   * test release
