--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.2.20) unstable; urgency=medium
+
+  * nuget dependency on renderer added
+
+ -- Ivan Gagis <igagis@gmail.com>  Fri, 30 Jun 2017 17:02:58 +0300
+
 libmordavokne (0.2.19) unstable; urgency=medium
 
   * test release
