--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.2.21) unstable; urgency=medium
+
+  * test release
+
+ -- Ivan Gagis <igagis@gmail.com>  Fri, 11 Aug 2017 14:51:12 +0300
+
 libmordavokne (0.2.20) unstable; urgency=medium
 
   * nuget dependency on renderer added
