--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.2.22) unstable; urgency=medium
+
+  * test release
+
+ -- Ivan Gagis <igagis@gmail.com>  Tue, 29 Aug 2017 22:21:51 +0300
+
 libmordavokne (0.2.21) unstable; urgency=medium
 
   * test release
