--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.2.23) unstable; urgency=medium
+
+  * update to latest morda
+
+ -- Ivan Gagis <igagis@gmail.com>  Thu, 14 Dec 2017 17:24:53 +0200
+
 libmordavokne (0.2.22) unstable; urgency=medium
 
   * test release
