--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.2.24) unstable; urgency=medium
+
+  * update to latest libmorda
+
+ -- Ivan Gagis <igagis@gmail.com>  Tue, 27 Feb 2018 16:52:27 +0200
+
 libmordavokne (0.2.23) unstable; urgency=medium
 
   * update to latest morda
