--- a/wiki/installation/Linux.adoc
+++ b/wiki/installation/Linux.adoc
@@ -6,13 +6,15 @@
 
 **Debian**
 ....
- echo $'deb https://dl.bintray.com/igagis/deb unstable main' | sudo tee /etc/apt/sources.list.d/igagis.list > /dev/null
- sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 379CE192D401AB61
+echo $'deb https://dl.bintray.com/igagis/deb unstable main' | sudo tee /etc/apt/sources.list.d/igagis.list > /dev/null
 ....
 **Ubuntu**
 ....
- echo $'deb https://dl.bintray.com/igagis/ubu unstable main' | sudo tee /etc/apt/sources.list.d/igagis.list > /dev/null
- sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 379CE192D401AB61
+echo $'deb https://dl.bintray.com/igagis/ubu unstable main' | sudo tee /etc/apt/sources.list.d/igagis.list > /dev/null
+....
+- Fetch **bintray** repository keys:
+....
+sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 379CE192D401AB61
 ....
 - Update apt packages:
 ....
