--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.2.28) unstable; urgency=medium
+
+  * add libmorda dependency to homebrew
+
+ -- Ivan Gagis <igagis@gmail.com>  Thu, 22 Mar 2018 17:47:03 +0200
+
 libmordavokne (0.2.27) unstable; urgency=medium
 
   * bintray deployment fixed
