--- a/wiki/installation/Linux.adoc
+++ b/wiki/installation/Linux.adoc
@@ -7,6 +7,7 @@
 **Debian**
 ....
 echo $'deb https://dl.bintray.com/igagis/deb unstable main' | sudo tee /etc/apt/sources.list.d/igagis.list > /dev/null
+sudo apt install dirmngr
 ....
 **Ubuntu**
 ....
