--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.2.30) unstable; urgency=medium
+
+  * android saveInstanceState()
+
+ -- Ivan Gagis <igagis@gmail.com>  Fri, 11 May 2018 23:34:45 +0300
+
 libmordavokne (0.2.29) unstable; urgency=medium
 
   * add libmorda-opengl2-ren dependency to homebrew
