--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.2.31) unstable; urgency=medium
+
+  * android 7 fix: do not use dlopen()
+
+ -- Ivan Gagis <igagis@gmail.com>  Sun, 12 Aug 2018 20:06:55 +0300
+
 libmordavokne (0.2.30) unstable; urgency=medium
 
   * android saveInstanceState()
