--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.2.32) unstable; urgency=medium
+
+  * android: fix for saving/restoring state on activity kill by os
+
+ -- Ivan Gagis <igagis@gmail.com>  Sun, 16 Sep 2018 03:06:38 +0300
+
 libmordavokne (0.2.31) unstable; urgency=medium
 
   * android 7 fix: do not use dlopen()
