--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.2.34) unstable; urgency=medium
+
+  * App::onSaveState() api removed
+
+ -- Ivan Gagis <igagis@gmail.com>  Fri, 21 Sep 2018 17:15:34 +0300
+
 libmordavokne (0.2.33) unstable; urgency=medium
 
   * storageDir API added
