--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.2.35) unstable; urgency=medium
+
+  * android crash fix
+
+ -- Ivan Gagis <igagis@gmail.com>  Sun, 23 Sep 2018 22:46:57 +0300
+
 libmordavokne (0.2.34) unstable; urgency=medium
 
   * App::onSaveState() api removed
