--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.2.36) unstable; urgency=medium
+
+  * android fix for not working drop down list
+
+ -- Ivan Gagis <igagis@gmail.com>  Sat, 13 Oct 2018 22:41:12 +0300
+
 libmordavokne (0.2.35) unstable; urgency=medium
 
   * android crash fix
