--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.2.46) unstable; urgency=medium
+
+  * adapt to latest libs
+
+ -- Ivan Gagis <igagis@gmail.com>  Wed, 08 Jan 2020 21:44:17 +0200
+
 libmordavokne (0.2.45) unstable; urgency=medium
 
   * refactoring
