--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.2.47) unstable; urgency=medium
+
+  * debian/buster i386 packages
+
+ -- Ivan Gagis <igagis@gmail.com>  Wed, 22 Jan 2020 17:58:42 +0200
+
 libmordavokne (0.2.46) unstable; urgency=medium
 
   * adapt to latest libs
