--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.2.49) unstable; urgency=medium
+
+  * update to latest morda
+
+ -- Ivan Gagis <igagis@gmail.com>  Fri, 14 Feb 2020 20:04:22 +0200
+
 libmordavokne (0.2.48) unstable; urgency=medium
 
   * use libopros
