--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.2.51) unstable; urgency=medium
+
+  * update to latest libs
+
+ -- Ivan Gagis <igagis@gmail.com>  Sun, 14 Jun 2020 15:20:56 +0300
+
 libmordavokne (0.2.50) unstable; urgency=medium
 
   * update to latest libs
