--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.2.52) unstable; urgency=medium
+
+  * use android native bundle plugin
+
+ -- Ivan Gagis <igagis@gmail.com>  Sat, 20 Jun 2020 16:20:12 +0300
+
 libmordavokne (0.2.51) unstable; urgency=medium
 
   * update to latest libs
