--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.2.53) unstable; urgency=medium
+
+  * update to latest libs
+
+ -- Ivan Gagis <igagis@gmail.com>  Sun, 05 Jul 2020 01:42:08 +0300
+
 libmordavokne (0.2.52) unstable; urgency=medium
 
   * use android native bundle plugin
