--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.2.54) unstable; urgency=medium
+
+  * update to latest libs
+
+ -- Ivan Gagis <igagis@gmail.com>  Sun, 05 Jul 2020 06:09:52 +0300
+
 libmordavokne (0.2.53) unstable; urgency=medium
 
   * update to latest libs
