--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.2.55) unstable; urgency=medium
+
+  * deploy to raspbian buster
+
+ -- Ivan Gagis <igagis@gmail.com>  Mon, 17 Aug 2020 20:24:48 +0300
+
 libmordavokne (0.2.54) unstable; urgency=medium
 
   * update to latest libs
