--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.2.56) unstable; urgency=medium
+
+  * update to latest morda
+
+ -- Ivan Gagis <igagis@gmail.com>  Mon, 14 Sep 2020 16:40:31 +0300
+
 libmordavokne (0.2.55) unstable; urgency=medium
 
   * deploy to raspbian buster
