--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.2.57) unstable; urgency=medium
+
+  * update to latest libs
+
+ -- Ivan Gagis <igagis@gmail.com>  Sun, 20 Sep 2020 15:32:17 +0300
+
 libmordavokne (0.2.56) unstable; urgency=medium
 
   * update to latest morda
