--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.2.58) unstable; urgency=medium
+
+  * github actions
+
+ -- Ivan Gagis <igagis@gmail.com>  Tue, 01 Dec 2020 23:47:09 +0200
+
 libmordavokne (0.2.57) unstable; urgency=medium
 
   * update to latest libs
