--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.2.66) unstable; urgency=medium
+
+  * deploy to jfrog
+
+ -- Ivan Gagis <igagis@gmail.com>  Fri, 09 Apr 2021 17:24:22 +0300
+
 libmordavokne (0.2.65) unstable; urgency=medium
 
   * android: preserve EGL context when window is hidden
