--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.2.68) unstable; urgency=medium
+
+  * relink to latest libs
+
+ -- Ivan Gagis <igagis@gmail.com>  Sun, 30 May 2021 01:16:45 +0300
+
 libmordavokne (0.2.67) unstable; urgency=medium
 
   * application factory
