--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.2.69) unstable; urgency=medium
+
+  * relink to latest libs
+
+ -- Ivan Gagis <igagis@gmail.com>  Tue, 22 Jun 2021 01:45:11 +0300
+
 libmordavokne (0.2.68) unstable; urgency=medium
 
   * relink to latest libs
