--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.2.71) unstable; urgency=medium
+
+  * test release
+
+ -- Ivan Gagis <igagis@gmail.com>  Sat, 24 Jul 2021 18:05:31 +0300
+
 libmordavokne (0.2.70) unstable; urgency=medium
 
   * deploy to own repo
