--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.2.72) unstable; urgency=medium
+
+  * use latest make in homebrew formulae
+
+ -- Ivan Gagis <igagis@gmail.com>  Thu, 12 Aug 2021 17:17:43 +0300
+
 libmordavokne (0.2.71) unstable; urgency=medium
 
   * test release
