--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.2.75) unstable; urgency=medium
+
+  * linux X11: turn on v-sync, glFinish after swap
+
+ -- Ivan Gagis <igagis@gmail.com>  Tue, 28 Sep 2021 18:15:56 +0300
+
 libmordavokne (0.2.74) unstable; urgency=medium
 
   * build for debian bullseye
