--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.2.76) unstable; urgency=medium
+
+  * linux: set initial viewport to requested window size
+
+ -- Ivan Gagis <igagis@gmail.com>  Thu, 30 Sep 2021 09:40:24 +0300
+
 libmordavokne (0.2.75) unstable; urgency=medium
 
   * linux X11: turn on v-sync, glFinish after swap
