--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmordavokne (0.2.87) unstable; urgency=medium
+
+  * fix lint
+
+ -- Ivan Gagis <igagis@gmail.com>  Wed, 09 Aug 2023 09:36:21 +0300
+
 libmordavokne (0.2.86) unstable; urgency=medium
 
   * relink
