--- a/wiki/Installation.adoc
+++ b/wiki/Installation.adoc
@@ -1,5 +1,5 @@
 = Istallation
-:package_name: mordavokne
+:package_name: ruisapp
 
 . Setup your OS-preferred package system repo following link:https://github.com/cppfw/wiki/blob/master/EnableRepo.adoc[this manual]
 . Install package
