--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,4 @@
-:name: mordavokne
+:name: ruisapp
 
 = {name}
 
@@ -6,7 +6,7 @@
 | link:https://github.com/cppfw/{name}/releases[image:https://img.shields.io/github/tag/cppfw/{name}.svg[releases]] | link:https://github.com/cppfw/{name}/actions[image:https://github.com/cppfw/{name}/workflows/ci/badge.svg[ci status]]
 |====
 
-**mordavokne** is a cross-platform library for creating a native window and initializing OpenGL. It provides **morda** library already bound to all platform specific stuff.
+**ruisapp** is a cross-platform library for creating a native window and initializing OpenGL. It provides **ruis** library already bound to all platform specific stuff.
 
 For installation instructions see link:wiki/Installation.adoc[WiKi]
 
