--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libruisapp (0.2.89) unstable; urgency=medium
+
+  * rename mordavokne to ruisapp
+
+ -- Ivan Gagis <igagis@gmail.com>  Tue, 23 Jan 2024 23:27:54 +0200
+
 libruisapp (0.2.88) unstable; urgency=medium
 
   * relink
