--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libruisapp (0.2.91) unstable; urgency=medium
+
+  * aptian
+
+ -- Ivan Gagis <igagis@gmail.com>  Fri, 01 Mar 2024 13:11:13 +0200
+
 libruisapp (0.2.90) unstable; urgency=medium
 
   * msvs: v143
