--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libruisapp (0.2.92) unstable; urgency=medium
+
+  * bookworm
+
+ -- Ivan Gagis <igagis@gmail.com>  Thu, 07 Mar 2024 20:48:36 +0200
+
 libruisapp (0.2.91) unstable; urgency=medium
 
   * aptian
