--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libruisapp (0.2.94) unstable; urgency=medium
+
+  * some wayland support
+
+ -- Ivan Gagis <igagis@gmail.com>  Wed, 03 Apr 2024 15:11:11 +0300
+
 libruisapp (0.2.93) unstable; urgency=medium
 
   * improve command line arguments passing
