--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libruisapp (0.2.95) unstable; urgency=medium
+
+  * basic wayland support
+
+ -- Ivan Gagis <igagis@gmail.com>  Mon, 08 Apr 2024 12:59:11 +0300
+
 libruisapp (0.2.94) unstable; urgency=medium
 
   * some wayland support
