--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libruisapp (0.2.98) unstable; urgency=medium
+
+  * upadte
+
+ -- Ivan Gagis <igagis@gmail.com>  Sun, 05 May 2024 00:37:10 +0300
+
 libruisapp (0.2.97) unstable; urgency=medium
 
   * update
