--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libruisapp (0.2.99) unstable; urgency=medium
+
+  * update
+
+ -- Ivan Gagis <igagis@gmail.com>  Sat, 18 May 2024 00:01:25 +0300
+
 libruisapp (0.2.98) unstable; urgency=medium
 
   * upadte
