--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libruisapp (0.2.100) unstable; urgency=medium
+
+  * update
+
+ -- Ivan Gagis <igagis@gmail.com>  Thu, 06 Jun 2024 22:47:07 +0300
+
 libruisapp (0.2.99) unstable; urgency=medium
 
   * update
