--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libruisapp (0.2.101) unstable; urgency=medium
+
+  * update
+
+ -- Ivan Gagis <igagis@gmail.com>  Mon, 10 Jun 2024 12:44:20 +0300
+
 libruisapp (0.2.100) unstable; urgency=medium
 
   * update
