--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libruisapp (0.2.102) unstable; urgency=medium
+
+  * update
+
+ -- Ivan Gagis <igagis@gmail.com>  Wed, 12 Jun 2024 23:58:03 +0300
+
 libruisapp (0.2.101) unstable; urgency=medium
 
   * update
