--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libruisapp (0.2.104) unstable; urgency=medium
+
+  * update
+
+ -- Ivan Gagis <igagis@gmail.com>  Sun, 07 Jul 2024 21:14:01 +0300
+
 libruisapp (0.2.103) unstable; urgency=medium
 
   * wyaland: touch events, untested
