--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libruisapp (0.2.105) unstable; urgency=medium
+
+  * update
+
+ -- Ivan Gagis <igagis@gmail.com>  Mon, 19 Aug 2024 18:38:36 +0300
+
 libruisapp (0.2.104) unstable; urgency=medium
 
   * update
