--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libruisapp (0.2.106) unstable; urgency=medium
+
+  * application directories
+
+ -- Ivan Gagis <igagis@gmail.com>  Wed, 04 Sep 2024 13:43:32 +0300
+
 libruisapp (0.2.105) unstable; urgency=medium
 
   * update
