--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libruisapp (0.2.107) unstable; urgency=medium
+
+  * application directories 2
+
+ -- Ivan Gagis <igagis@gmail.com>  Wed, 04 Sep 2024 15:44:16 +0300
+
 libruisapp (0.2.106) unstable; urgency=medium
 
   * application directories
