--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libruisapp (0.2.109) unstable; urgency=medium
+
+  * rebuild
+
+ -- Ivan Gagis <igagis@gmail.com>  Wed, 04 Sep 2024 16:19:11 +0300
+
 libruisapp (0.2.108) unstable; urgency=medium
 
   * rebuild
