--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libruisapp (0.2.110) unstable; urgency=medium
+
+  * redeploy
+
+ -- Ivan Gagis <igagis@gmail.com>  Thu, 05 Sep 2024 11:59:06 +0300
+
 libruisapp (0.2.109) unstable; urgency=medium
 
   * rebuild
