--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libruisapp (0.2.111) unstable; urgency=medium
+
+  * ubuntu noble
+
+ -- Ivan Gagis <igagis@gmail.com>  Tue, 10 Sep 2024 13:35:04 +0300
+
 libruisapp (0.2.110) unstable; urgency=medium
 
   * redeploy
