--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libruisapp (0.2.112) unstable; urgency=medium
+
+  * update
+
+ -- Ivan Gagis <igagis@gmail.com>  Sun, 06 Oct 2024 00:56:48 +0300
+
 libruisapp (0.2.111) unstable; urgency=medium
 
   * ubuntu noble
