--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libruisapp (0.2.113) unstable; urgency=medium
+
+  * update
+
+ -- Ivan Gagis <igagis@gmail.com>  Mon, 13 Jan 2025 15:14:22 +0200
+
 libruisapp (0.2.112) unstable; urgency=medium
 
   * update
