--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libruisapp (0.2.114) unstable; urgency=medium
+
+  * update
+
+ -- Ivan Gagis <igagis@gmail.com>  Sat, 15 Mar 2025 14:41:49 +0200
+
 libruisapp (0.2.113) unstable; urgency=medium
 
   * update
