--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libruisapp (0.2.115) unstable; urgency=medium
+
+  * update
+
+ -- Ivan Gagis <igagis@gmail.com>  Mon, 31 Mar 2025 00:49:13 +0300
+
 libruisapp (0.2.114) unstable; urgency=medium
 
   * update
