--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libruisapp (0.2.116) unstable; urgency=medium
+
+  * update
+
+ -- Ivan Gagis <igagis@gmail.com>  Tue, 01 Apr 2025 02:19:29 +0300
+
 libruisapp (0.2.115) unstable; urgency=medium
 
   * update
