--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libruisapp (0.2.117) unstable; urgency=medium
+
+  * update
+
+ -- Ivan Gagis <igagis@gmail.com>  Fri, 11 Apr 2025 18:03:35 +0300
+
 libruisapp (0.2.116) unstable; urgency=medium
 
   * update
