--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libruisapp (0.2.118) unstable; urgency=medium
+
+  * update
+
+ -- Ivan Gagis <igagis@gmail.com>  Mon, 28 Apr 2025 15:03:46 +0300
+
 libruisapp (0.2.117) unstable; urgency=medium
 
   * update
