--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libruisapp (0.2.119) unstable; urgency=medium
+
+  * update
+
+ -- Ivan Gagis <igagis@gmail.com>  Tue, 06 May 2025 11:09:34 +0300
+
 libruisapp (0.2.118) unstable; urgency=medium
 
   * update
