--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libruisapp (0.2.121) unstable; urgency=medium
+
+  * cmake: copy res
+
+ -- Ivan Gagis <igagis@gmail.com>  Sun, 01 Jun 2025 19:58:55 +0300
+
 libruisapp (0.2.120) unstable; urgency=medium
 
   * vcpkg
