--- a/wiki/Installation.adoc
+++ b/wiki/Installation.adoc
@@ -4,9 +4,10 @@
 . Setup your OS-preferred package system repo following link:https://github.com/cppfw/wiki/blob/main/EnableRepo.adoc[this manual]
 . Install package
 +
+- **vcpkg** (Linux, Windows): `{package_name}`
 - **deb** (Linux): `lib{package_name}-dev`
 - **homebrew** (MacOS X): `lib{package_name}`
 - **Android**: `io.github.cppfw:{package_name}`
 - **cocoapods** (iOS): `{package_name}`
 - **Msys2** (Windows): `mingw-w64-i686-{package_name}`, `mingw-w64-x86_64-{package_name}`
-- **Nuget** (Windows, Visual Studio): `lib{package_name}`
+- **Nuget** DEPRECATED: use vcpkg instead. (Windows, Visual Studio): `lib{package_name}`
