--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libruisapp (0.2.122) unstable; urgency=medium
+
+  * cmake: config transient deps
+
+ -- Ivan Gagis <igagis@gmail.com>  Sun, 08 Jun 2025 17:00:32 +0300
+
 libruisapp (0.2.121) unstable; urgency=medium
 
   * cmake: copy res
